Bug 301033 - Bidi: Caret placed in wrong position when arrowing over a single reverse-direction character. patch from Uri Bernstein <uriber@gmail.com>, r+sr=roc, a=asa.